--- a/preparing.html
+++ b/preparing.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="images/logo_white.png" alt="로고" class="logo">
+        <img src="logo_white.png" alt="로고" class="logo">
         <h1 class="company-name">귀인당 발효</h1>
         <p class="preparing">-Coming Soon-</p>
         <!-- <p class="message">열심히 준비중입니다.</p> -->
