폰 크롬에서 글씨체 반영 안되고 그림이 화면에 꽉차서 이미지 하나로 띄움

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="images/logo_white.png" alt="로고" class="logo">
-        <h1 class="company-name">귀인당 발효</h1>
-        <p class="preparing">-Coming Soon-</p>
+        <img src="images/landing_page.png" alt="로고" class="logo">
+        <!-- <img src="images/logo_white.png" alt="로고" class="logo"> -->
+        <!-- <h1 class="company-name">귀인당 발효</h1>
+        <p class="preparing">-Coming Soon-</p> -->
         <!-- <p class="message">열심히 준비중입니다.</p> -->
     </div>
 </body>
